--- a/D.tex
+++ b/D.tex
@@ -27,7 +27,7 @@ Devices are designed to improve certain physiological conditions, the performanc
 $$C_{pre}\rightarrow C_{post}$$
 in which $C_{pre}$ is the physiological conditions without the device,  and $C_{post}$ is the physiological condition with the device. For model-based closed-loop verification, $C_{pre}$ is often in form of a set of constraints on patient parameters. As a special case, $C_{pre}$ can equal to $true$, means that $C_{post}$ should be satisfied under all possible conditions.
 
-Among all the physiological requirements for a device, not all of them are equally important. More important requirements should be given higher priorities. According to the importance of the requirement
+Due to the limited capability of medical devices, not all physiological requirements Among all the physiological requirements for a device, not all of them are equally important and sometimes it is impossible to satisfy them all. More important requirements should be given higher priorities. According to the importance of the requirement
 
 For convenience, requirements are usually specified with binary results (satisfied/unsatisfied). quantitative
 
