--- a/E.tex
+++ b/E.tex
@@ -5,10 +5,21 @@
 \end{itemize}
 
 \section{Basic 5 timing cycles}
-\begin{figure}[!b]
+\begin{figure}[!]
 \center
 %\vspace{-10pt}
 \includegraphics[width=0.7\textwidth]{figs/PM_timers.pdf}
+%\vspace{-10pt}
+\caption{Basic 5 timing cycles for a dual chamber pacemaker}
+\label{fig:PMtimers}
+%\vspace{-10pt}t
+
+\end{figure} 
+Since the pacemaker operates only on the timing between events. 
+\begin{figure}[!t]
+\center
+%\vspace{-10pt}
+\includegraphics[width=0.9\textwidth]{figs/pacemaker.pdf}
 %\vspace{-10pt}
 \caption{Basic 5 timing cycles for a dual chamber pacemaker}
 \label{fig:PMtimers}
@@ -33,26 +44,7 @@
 %\vspace{-15pt}
 \end{figure*} 
 
-\section{Pacemaker Mediated Tachycardia Termination}
-show need for closed-loop. open-loop inputs of this scenario
 
-\begin{figure*}[!t]
-\centering
-		\subfigure [\small]{			
-		\includegraphics[width=0.4  \textwidth]{figs/ELT_str.pdf}
-		\label{fig:ELT_str}
-		} 
-%	\hspace{.1in}%
-		
-		\subfigure [\small] 
-		{
-		\includegraphics[width=0.4\textwidth]{figs/ELT.pdf}
-		\label{fig:ELT}
-		} 
-%\vspace{-10pt}
-\caption{\small (a) Node automaton. Dotted transition is only valid for pacemaker tissue like SA node; (b) Path automaton; (c) Model of the electrical conduction system of the heart using a network of node \& path automata~\cite{vhm_ecrts10}.}
-%\vspace{-15pt}
-\end{figure*} 
 
 
 \chapter{Closed-loop Model Checking}
