--- a/E.tex
+++ b/E.tex
@@ -109,15 +109,16 @@ In each component two copies for both modes are modeled, and switch between each
             \item What is the model complexity requirements for each physiological requirement? When and how to refine the environment model?
             \item Exploring the whole state space sounds great. What are the limitations of model checking? 
 \end{itemize}
+
 \begin{figure*}
 \centering
 %\vspace{-10pt}
 		\subfigure[Monitor \textsf{PLRI\_test}] {
-				\includegraphics[width=0.3\textwidth]{figs/LRI_test.pdf}
+				\includegraphics[width=0.5\textwidth]{figs/LRI_test.pdf}
 				\label{fig:safety1}
 		} 
 		\subfigure[Monitor \textsf{PURI\_test}] {	
-			\includegraphics[width=0.25\textwidth]{figs/uri_test.pdf}
+			\includegraphics[width=0.4 5\textwidth]{figs/uri_test.pdf}
 			\label{fig:uri_test}
 		}
 		%\vspace{-10pt}
