--- a/A.tex
+++ b/A.tex
@@ -2,6 +2,11 @@
 \begin{itemize}
   \item Why does the safety of the medical devices, the software component in particular, so important?
   \item What is the difference between software specification and software requirement?
+	
+	\begin{itemize}
+		\item 
+	\end{itemize}
+	
   \item What is the current practice to ensure software safety? 
   
   \item What's the problem with the current practice?
