--- a/main.tex
+++ b/main.tex
@@ -32,7 +32,7 @@
 \usepackage{amsthm}
 \usepackage{amsfonts}
 
-\title{Physiological Modeling in Medical Device Software Development and Certification}
+\title{High-confidence Medical Device Software Development}
 \author{
 Zhihao Jiang \\
 University of Pennsylvania\\
