--- a/A.tex
+++ b/A.tex
@@ -4,7 +4,9 @@
   \item What is the difference between software specification and software requirement?
 	
 	\begin{itemize}
-		\item 
+		\item The devices are designed to achieve certain physiological goals under certain physiological conditions. These goals are the \emph{physiological requirements} which specifies the physiological conditions without the devices, and expected conditions with the devices. There is no mention of how the devices can achieve them.
+		\item Once the interface between the device and its physiological context is determined, device functions are specified as the inputs and outputs of the devices. These documents are referred to as specifications. 
+		\item Specifications can be verified with open-loop methods while physiological requirements can only be verified in closed-loop manner.
 	\end{itemize}
 	
   \item What is the current practice to ensure software safety? 
