--- a/E.tex
+++ b/E.tex
@@ -126,7 +126,7 @@ In model-based software design, the system can be abstracted by a model. With pr
 %\vspace{-15pt}
 \end{figure*} 
 \section{Reachability of Unsafe Regions}
-In this section, we define unsafe regions regarding bradycardia and tachycardia and specify two fundamental safety properties. These two fundamental safety properties are strict so that they must be satisfied by any pacemaker under all heart conditions. 
+The basic function of a pacemaker is to increase heart rate when necessary. As the result, we not only want to verify that the heart rate has been increased accordingly, but also ensure the pacemaker does not increase the heart rate too much. Since these requirements should hold for all possible heart conditions, the most abstract heart model $H_4$ is selected as the environment model. The following two requirements specify the unsafe regions  (too fast and too slow) within the closed-loop state space.
 
 \subsection{Lower Rate Limit}
 The most essential function for the pacemaker is to treat bradycardia by maintaining the ventricular rate above a certain threshold. We define the region where the ventricular rate is slow, as \textsf{unsafe}. The monitor \textsf{PLRI\_test} is designed to measure intervals between ventricular events and is shown in \figref{safety1}. For property \\
@@ -137,12 +137,28 @@ The pacemaker is not designed to treat tachycardia so it can only pace the heart
   
 We require that a ventricle pace (VP) can only occur at least $TURI$ after a ventricle event (VS, VP). The monitor \textsf{PURI\_test} is shown in \figref{uri_test}. For the property\\
 $\varphi_{URI}=$\textsf{A[] (PURI\_test.secV imply PURI\_test.t$\geq$TURI)} \\
-we have $H_4\| P\| PURI\_test\models \varphi_{URI}$.\section{Advanced Functions}
-\subsection{Atrial Tachycardia Response}
-\subsection{Endless Loop Tachycardia}
+we have $H_4\| P\| PURI\_test\models \varphi_{URI}$.
+
+\section{Model Checking the Mode-Switch Algorithm}
+
+\subsection{Existence of PMT during SVT}
+The monitor \textsf{Pv\_v} is designed to show existence of PMT during SVT. It goes to the error state if the ventricular rate drops below the Upper Rate Limit (\figref{vv}).  
+\begin{figure}
+		\centering
+		\includegraphics[width=0.4\textwidth]{figs/vv.pdf}
+		\caption{\small Monitor \textsf{Pv\_v} for SVT: There exists an endless sequence in which interval between ventricular events is at most TURI}
+		  %\vspace{-15pt}
+		\label{fig:vv}
+\end{figure}
+
+We specify\\
+$\varphi_{MS}=E[] (not Pv\_v.err)$\\
+which verifies the existence of PMT. To identify the PMT scenario, we first set $H_3.N^1.Trest\_min<100$ so that the atrial rate can be high and $H_3.N^2.Trest\_min>TURI$ so that the intrinsic heart rate is less than TURI. The property is first verified on pacemaker without the mode-switch algorithm. We have\\
+$H_3\|P\|Pv\_v\models\varphi_{MS}$
+
 \section{Heart Model Refinements}
     
-\section{Quantitative Model Checking}
+
 
 \chapter{Closed-loop Model Simulation/Testing}
 \begin{itemize}
