--- a/E.tex
+++ b/E.tex
@@ -103,9 +103,8 @@ In each component two copies for both modes are modeled, and switch between each
 \chapter{Closed-loop Model Checking}
 \begin{itemize}
 	\item How to use models to cover environmental conditions specified in the physiological requirements, that the device may encounter?
-            \item What are the physiological requirements? What form should they be?
             \item Can model checking find violations that testing cannot find?
-            \item What are the effects of adding new features? Can they disrupt the safety properties that the previous device hold?
+            \item What are the effects of adding new features to the software? Can they disrupt the safety properties that the previous device hold?
             \item What is the model complexity requirements for each physiological requirement? When and how to refine the environment model?
             \item Exploring the whole state space sounds great. What are the limitations of model checking? 
 \end{itemize}
