--- a/F.tex
+++ b/F.tex
@@ -5,6 +5,6 @@
           	\item Can model-based closed-loop verification provide more safety guarantee than current practice? How much?
           \end{itemize}
 \section{Current Practice}
-There are two mechanisms that a medical device can enter the market in U.S. The Premarket Notification, also known as 510(k), is the most common and simple way. In a 510(k) submission The general philosophy for FDA certification is the "`Least Burden Approach"'
+There are two mechanisms that a medical device can enter the market in U.S. The Premarket Notification, also known as 510(k), is the most common and simple way. In a 510(k) submission the device manufacturers have to provide evidence that the device is The general philosophy for FDA certification is the "`Least Burden Approach"'
 \section{Model-based Proof of Confidence}
 %\cite{pancreas}
