--- a/main.tex
+++ b/main.tex
@@ -34,12 +34,11 @@
 
 \title{High-confidence Medical Device Software Development}
 \author{
-Zhihao Jiang \\
-University of Pennsylvania\\
-zhihaoj@seas.upenn.edu\and
 Rahul Mangharam \\
 University of Pennsylvania\\
-rahulm@seas.upenn.edu}
+rahulm@seas.upenn.edu\and Zhihao Jiang \\
+University of Pennsylvania\\
+zhihaoj@seas.upenn.edu}
 
 \begin{document}
 
