--- a/E.tex
+++ b/E.tex
@@ -162,11 +162,55 @@ The monitor \textsf{Pv\_v} is designed to show existence of PMT during SVT. It g
 
 We specify\\
 $\varphi_{MS}=E[] (not Pv\_v.err)$\\
-which verifies the existence of PMT. To identify the PMT scenario, we first set $H_3.N^1.Trest\_min<100$ so that the atrial rate can be high and $H_3.N^2.Trest\_min>TURI$ so that the intrinsic heart rate is less than TURI. The property is first verified on pacemaker without the mode-switch algorithm. We have\\
-$H_3\|P\|Pv\_v\models\varphi_{MS}$
+which verifies the existence of PMT. The heart model $H_3$ is not suitable for this property since the non-deterministic conduction of component $P_3$ does not capture the blocking property of the AV node, which is the key in PMT. We use a more refined model $H_2$ which has AV node modeled. To identify the PMT scenario, we first set $H_2.N^1.Trest\_min<100$ so that the atrial rate can be high and $H_2.N^2.Trest\_min>TURI$ so that the intrinsic heart rate is less than TURI. The property is first verified on pacemaker without the mode-switch algorithm. We have\\
+$H_2\|P\|Pv\_v\models\varphi_{MS}$
+and the evidence returned by the model checker illustrates the PMT scenario.
 
-\section{Heart Model Refinements}
-    
+\subsection{Mode-Switch Algorithm}
+We now analyze the approach use in pacemakers to prevent prolonged ventricular pacing under SVT. Intuitively, the mode-switch algorithm first detects SVT. After confirmed detection, it switches the pacemaker from a dual-chamber mode to a single-chamber mode. During the single-chamber mode, the A-V synchrony function of the pacemaker is deactivated thus the ventricular rate is decoupled from the fast atrial rate. After the algorithm determines the end of SVT, it will switch the pacemaker back to the dual chamber mode. 
+
+The mode-switch algorithm specification we use is similar to the one described in the Boston Scientific pacemakers manual \cite{compass}. The algorithm first measures the interval between atrial events outside the blanking period (AS, AR). The interval is considered as \emph{fast} if it is above a threshold (\emph{Trigger Rate}) and \emph{slow} otherwise. In our UPPAAL model we model it as $INT$ (see \figref{dur_count} (1)). A counter $CNT$ increments for \emph{fast} events and decrements for \emph{slow} events (see \figref{dur_count} (2)). After the counter value reaches the \emph{Entry Count}, the algorithm will start a \emph{Duration} ($DUR$) which is a time interval used to confirm the detection of SVT (see \figref{dur_count} (3)). In the \emph{Duration}, the counter keeps counting. If the counter value is still positive after the \emph{Duration}, the pacemaker will switch to the VDI mode (\emph{Fallback mode}). In the VDI mode, the pacemaker only senses and paces the ventricle. At any time if the counter reaches zero, the \emph{Duration} will terminate and the pacemaker is switched back to DDD mode.
+% to show some interesting findings. The basic idea of this simplified model is explained in detail. \\
+%\mySubSubSection{UPPAAL model for mode-switch algorithm}
+In our UPPAAL model of the mode-switch algorithm, we use nominal parameter values from the clinical setting. We define \emph{trigger rate} at 170bpm (350ms), \emph{entry count} at 8, \emph{duration} for 8 ventricular events and \emph{fallback mode} as VDI. 
+
+
+In order to model both DDD and VDI modes and the switching between them, we made modifications to the AVI and LRI components.
+In each component two copies for both modes are modeled, and switch between each other when switching events (DDD, VDI) are received. During VDI mode, VP is delivered by the LRI component instead of the AVI component. The clock values are shared between both copies in order to preserve essential intervals even after switching. The modified AVI ($AVI'$) and LRI ($LRI'$)components are shown in \figref{avi_ms}. So the new pacemaker model is:\\
+$P_2$=\textsf{LRI'$\|$AVI'$\|$URI$\|$PVARP$\|$VRP$\|$INT$\|$CNT$\|$DUR}
+% There are two separate AVI and LRI components for each mode and switches to the corresponding ones when synchronization signals are received. The clock values are kept so that essential intervals are kept. 
+\subsection{Verification against fundamental safety properties}
+We verify the same fundamental safety properties on the pacemaker model with mode-switch algorithm. We have:
+$$H_2\|P_2\|PURI\_test\models\varphi_{URI}$$
+$$H_2\|P_2\|PLRI\_test\not\models\varphi_{LRI}$$
+The Upper Rate Limit property still holds but the Lower Rate Limit property is violated. The counterexample is proved to be valid after checking the trace of more refined heart models. By analyzing the trace we found that when the pacemaker is switching from VDI mode to DDD mode, the responsibility to deliver VP switched from LRI component to AVI component. Since the clock reference is different (Ventricular events in LRI component and Atrial events in AVI component), the clock value for delivering the next VP is not preserved. As a result, if an atrial event which triggered the mode-switch from VDI to DDD happens within [TLRI-TAVI, TLRI) after the last ventricular event, the next ventricular pacing will be delayed by at most TAVI time, which violates the Lower Rate Limit property (\figref{safety}). 
+\begin{figure}
+		\centering
+		\includegraphics[width=0.4\textwidth]{figs/vv.pdf}
+		\caption{\small Monitor \textsf{Pv\_v} for SVT: There exists an endless sequence in which interval between ventricular events is at most TURI}
+		  %\vspace{-15pt}
+		\label{fig:vv}
+\end{figure}
+\subsection{Verification Result}
+After implementing the Mode-switch algorithm, we verified the model against the same existence property. We expect the violation of this property, since during VDI mode the ventricular rate of the heart model is less than the Upper Rate Limit and will not trigger ventricular pacing. However, this property is still satisfied, indicating the mode-switch algorithm failed to eliminate the PMT scenario. The evidence trace returned by UPPAAL shows that a subset of atrial events fall into the blanking period after a ventricular event (see \figref{liveness}). As a result, two fast events are reduced to one slow event and mode switch may never happen. This scenario does exist in all our refined heart models, we conclude that the trace is physiologically feasible. The mode-switch algorithm in our pacemaker model can not terminate all PMT behaviors as specified.
+
+\subsection{Trace Validation on Real Pacemaker and Pacemaker Refinement}
+In the previous subsections, we have found two potential safety violations in our pacemaker model. However, this does not mean the actual pacemaker has the same violation. Jiang et al. have implemented the VHM model onto a programmable integrated circuit (FPGA) platform and had it interact with a real pacemaker at run-time \cite{PVS}. The closed-loop behavior can be checked in closed-loop with a real pacemaker. If the trace is not feasible in the closed-loop system, the pacemaker model needs to be refined to eliminate the execution. However, refining the pacemaker model requires more detailed representation of the pacemaker software, which was not available to us at that time.
+\begin{figure}
+\centering
+%\vspace{-20pt}
+		\subfigure []{
+				\includegraphics[width=0.2\textwidth]{figs/safety.pdf}
+				\label{fig:safety}
+		} 
+		\subfigure []{	
+			\includegraphics[width=0.2\textwidth]{figs/liveness.pdf}
+			\label{fig:liveness}
+		}
+		\vspace{-10pt}
+	\caption{(a) Safety Violation: VP is delayed due to the reset of timer during mode-switch, (b) Correctness Violation: The blocking period may block some atrial events, turning two \emph{Fast} events to one \emph{Slow} event \cite{TACAS12}}
+\vspace{-20pt}
+\end{figure} 
 
 
 \chapter{Closed-loop Model Simulation/Testing}
